<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainPages</class>
 <widget class="QWidget" name="MainPages">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>520</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="MessagePage" name="pageMsg" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>400</width>
     <height>520</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(85, 170, 0);</string>
   </property>
  </widget>
  <widget class="HomePage" name="pageHome" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>400</width>
     <height>520</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(255, 170, 0);</string>
   </property>
  </widget>
  <widget class="MinePage" name="pageMine" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>400</width>
     <height>520</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(170, 0, 0);</string>
   </property>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>HomePage</class>
   <extends>QWidget</extends>
   <header>pages/HomePage.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>MessagePage</class>
   <extends>QWidget</extends>
   <header>pages/MessagePage.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>MinePage</class>
   <extends>QWidget</extends>
   <header>pages/MinePage.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
